Add Odyssey to switcher plus some supergraph language

--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -15,7 +15,7 @@ import {
 import {DOCSET_ICONS} from '../../components/DocsetMenu';
 import {SiDiscourse, SiGithub, SiTwitter, SiYoutube} from 'react-icons/si';
 
-Apollo is a platform for building a unified **graph**, a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your backend services. At the heart of the graph is a query language called **GraphQL**.
+Apollo is a platform for building a **unified supergraph**, a communication layer that helps you manage the flow of data between your application clients (such as web and native apps) and your backend services. At the heart of the supergraph is a query language called **GraphQL**.
 
 <Odyssey />
 
@@ -41,14 +41,14 @@ Execute GraphQL operations, cache their results, and manage your application's s
   <Docset
     icon={DOCSET_ICONS.federation}
     title="Federation"
-    description="Implement a single unified graph across multiple subgraphs."
+    description="Implement a single unified supergraph across multiple subgraphs."
     path="/federation"
     cta={CTA_LEARN}
   />
   <Docset
     icon={DOCSET_ICONS.router}
     title="Router (preview)"
-    description="A configurable, high-performance graph router for a federated graph."
+    description="A configurable, high-performance graph router for a federated supergraph."
     path="/router"
   />
 </DocsetGrid>
@@ -59,7 +59,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
   <Docset
     icon={DOCSET_ICONS.studio}
     title="Studio"
-    description="Build your graph with your team, evolve it safely, and keep it running smoothly."
+    description="Build your supergraph with your team, evolve it safely, and keep it running smoothly."
     path="/studio"
     cta={CTA_LEARN}
   />
