Better highlight data privacy Studio article

--- a/src/content/studio/index.mdx
+++ b/src/content/studio/index.mdx
@@ -22,6 +22,7 @@ import CalloutCard from '../shared/callout-card.mdx';
 - Team collaboration via [organizations](./org/organizations/)
 - [Notifications](./notification-setup/) for schema changes and daily metrics reports
 - [Management of a federated graph](https://www.apollographql.com/docs/federation/managed-federation/overview/)
+- Robust [data privacy](./data-privacy)
 
 ### Available with an Apollo Team or Enterprise plan
 
