--- a/src/content/studio/getting-started.mdx
+++ b/src/content/studio/getting-started.mdx
@@ -149,10 +149,11 @@ However, to get the most out of Studio, you need to _re_-register your server's 
 
 The best way to fully familiarize yourself with Studio is to use it! Visit [studio.apollographql.com](https://studio.apollographql.com/) and check out the all the various views and what they provide.
 
-The docs also have plenty of information on the features available with Team and Enterprise plans, such as:
+The docs also have plenty of information on the features available for plans of all types, including:
 
 - [Schema checks](./schema-checks)
 - [Segmenting metrics by client types and versions](./metrics/client-awareness/)
 - [Integration with Datadog](./metrics/datadog-integration/)
+- [Data privacy](./data-privacy)
 
 If you'd like to have a conversation about Apollo Studio and how it can help your organization, [please contact us](https://www.apollographql.com/contact-sales).
