--- a/src/content/basics/index.mdx
+++ b/src/content/basics/index.mdx
@@ -47,7 +47,7 @@ Execute GraphQL operations, cache their results, and manage your application's s
   />
   <Docset
     icon={DOCSET_ICONS.router}
-    title="Router (preview)"
+    title="Router"
     description="A configurable, high-performance graph router for a federated supergraph."
     path="/router"
   />
