--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Introduction to Apollo Tech Notes
+title: Apollo Tech Notes
 ---
 
-Hello from new page!
+Apollo Tech Notes serve as a place to host technical content of many various topics. They can include example code snippets, short explinations on architecture ideas, or more info on how to use the Apollo plaform that doesn't quite have a home in the  main docs.
