--- a/src/content/studio/schema-checks.mdx
+++ b/src/content/studio/schema-checks.mdx
@@ -14,7 +14,7 @@ You can review the results of schema checks inside Studio, helping you make info
   width="300"
 />
 
-> Schema checks are **free** and generally available as part of Apollo Studio [All plans](https://www.apollographql.com/plans/).
+> Schema checks are **free** as part of [all Apollo Studio plans](https://www.apollographql.com/plans/).
 
 ## Types of checks
 
