Change odyssey URL

--- a/src/content/basics/enterprise-guide/additional-resources.mdx
+++ b/src/content/basics/enterprise-guide/additional-resources.mdx
@@ -7,7 +7,7 @@ In addition to the content in this guide, the following resources will be helpfu
 
 ## GraphQL
 
-- [Odyssey - Learn GraphQL with Apollo](https://odyssey.apollographql.com/)
+- [Odyssey - Learn GraphQL with Apollo](https://www.apollographql.com/tutorials)
 - [Learn - graphql.org](https://graphql.org/learn/)
 - [GraphQL Specification](http://spec.graphql.org/)
 - [Principled GraphQL](https://principledgraphql.com/)
