Other tweaks for free schema checks

--- a/src/content/studio/index.mdx
+++ b/src/content/studio/index.mdx
@@ -20,6 +20,7 @@ import CalloutCard from '../shared/callout-card.mdx';
 - A powerful [Explorer](./explorer/explorer/) that helps your team build and run queries against your registered schema
 - [Metrics reporting](./metrics/usage-reporting/) for up to the last 24 hours
 - Team collaboration via [organizations](./org/organizations/)
+- [Schema checks](./schema-checks/) that help you verify that changes to your graph are safe for existing clients
 - [Notifications](./notification-setup/) for schema changes and daily metrics reports
 - [Management of a federated graph](https://www.apollographql.com/docs/federation/managed-federation/overview/)
 - Robust [data privacy](./data-privacy)
@@ -28,7 +29,6 @@ import CalloutCard from '../shared/callout-card.mdx';
 
 - [Metrics reporting](./metrics/usage-reporting/) for arbitrary timeframes
 - [Metrics segmentation by distinct clients and versions](./metrics/client-awareness/)
-- [Schema checks](./schema-checks/)
 - [Resolver-level query tracing](./metrics/field-usage/)
 - [Integration with Datadog](./metrics/datadog-integration/)
 - Longer data retention
