--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -8,6 +8,12 @@ import ObtainGraphApiKey from '../../shared/obtain-graph-api-key';
 
 > **Schema reporting does not currently support graphs that use Apollo Federation.** If you have a federated graph, instead see [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
 
+> **⚠️ Caution ⚠️**
+>
+> Schema reporting requires your sever to publish the schema updates at runtime. This can lead to non-deterministic results.
+> We recommend using the [Rover CLI](https://www.apollographql.com/docs/rover) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
+> You can also read our Enterprise Guide on [Change Management](https://www.apollographql.com/docs/enterprise-guide/change-management) for more info on how to stage and release schema updates.
+
 ## Apollo Server setup
 
 Schema reporting is available in Apollo Server version 2.15 and later. To enable it:
