add section on second option for embedding

--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -49,6 +49,15 @@ This configures your embedded Explorer to include all of the following automatic
 - Any variable values defined in your current Explorer tab that are used in the selected operation
 - All headers defined in your current Explorer tab
 
+You can also open the Embed Explorer dialog with a default operation from the share dropdown in Explorer. 
+
+<img
+  class="screenshot"
+  src="../img/explorer-embed-share-dropdown.jpg"
+  alt="Explorer embed dropdown"
+  width="300"
+/>
+
 ## Options
 
 The `EmbeddedExplorer` object takes an options object with the following structure (individual options are described below):
