--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -27,19 +27,27 @@ For example, here's an embedded Explorer for an Apollo example graph. Try it out
      width="600"
    />
 
-4. Use the options in the dialog to customize the embedded Explorer's appearance and behavior to your liking.
-5. You have three options for how you want to embed the Explorer. You can use the `@apollo/explorer` npm package, or hosted built files to embed. The `@apollo/explorer` npm package exports a React component that when rendered, embeds the Explorer, or a Javascript class that you can call to embed. Once you have decided which version to use, click **Copy** to copy the snippet, then paste it into your code.
+4. Use the options on the left side of the dialog to customize the embedded Explorer's appearance and behavior to your liking.
 
-[See below](#options) for descriptions of options shown in the dialog, along with advanced options that _aren't_ shown.
+5. Still in the dialog, use the tabs above the code snippet to select the snippet for your use case:
+
+    * Use **React** for React apps where you can `npm install` the `@apollo/explorer` package.
+    * Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/explorer` package.
+    * Use **Built file on CDN** to use Apollo's CDN-hosted `@apollo/explorer` package.
+
+6. Click **Copy** to copy the snippet, then paste it into your code.
+
+> For descriptions of options shown in the dialog (along with advanced options that _aren't_ shown), [see below](#options).
 
 ### Embedding with a default operation
 
-You can also open the Embed Explorer dialog from two other places in Studio, both of which configure your embedded Explorer to include all of the following automatically on load:
+You can prepopulate your embedded Explorer with an operation from one of your existing Explorer tabs. If you do, the embedded Explorer includes all of the following automatically on load:
 
-- The operation you selected
-- Any variable values defined in your current Explorer tab that are used in the selected operation
-- All headers defined in your current Explorer tab
+* The operation you selected
+* Any variable names and values defined in the operation's associated tab that are _used_ by the operation
+* All header names and values defined in the operation's associated tab
 
+To prepopulate a default operation, use one of the following methods:
 
 #### Option 1
 
@@ -54,7 +62,7 @@ Open the **•••** menu next to an operation and click **Embed this operatio
 
 #### Option 2
 
-Open the share dropdown in Explorer, and select "Share as embed".
+Open the share dropdown in the Explorer and select **Share as embed**:
 
 <img
   class="screenshot"
@@ -234,7 +242,7 @@ You might want to do this if you need to include specific headers in every reque
 
 By default, the embedded Explorer uses the default `fetch` function to make requests, which passes `{ credentials: 'omit' }`.
 
-You can pass `includeCookies: true` if you want `{ credentials: 'include' }` to be passed as an option whenever requests are make from the Explorer. 
+You can pass `includeCookies: true` if you want `{ credentials: 'include' }` to be passed as an option whenever requests are make from the Explorer.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 </td>
