--- a/src/content/studio/explorer/embed-explorer.mdx
+++ b/src/content/studio/explorer/embed-explorer.mdx
@@ -33,7 +33,7 @@ For example, here's an embedded Explorer for an Apollo example graph. Try it out
 
     * Use **React** for React apps where you can `npm install` the `@apollo/explorer` package.
     * Use **JavaScript** for non-React JavaScript apps where you can `npm install` the `@apollo/explorer` package.
-    * Use **Built file on CDN** to use Apollo's CDN-hosted `@apollo/explorer` package.
+    * Use **Built file on CDN** to use Apollo's CDN-hosted embedded Explorer.
 
 6. Click **Copy** to copy the snippet, then paste it into your code.
 
