Move tags to list

--- a/src/content/technotes/server-side/client-id-enforcement.mdx
+++ b/src/content/technotes/server-side/client-id-enforcement.mdx
@@ -1,6 +1,6 @@
 ---
 title: Client ID Enforcement
-tags: server, observability
+tags: [server, observability]
 ---
 
 As part of the Studio metrics reporting, you can [tag the request with the client name and version](https://www.apollographql.com/docs/studio/metrics/client-awareness). This info can be extremely useful to schema authors to understand who is using certain fields in the graph and who to contact when changes or deprecations need to be made. Clients also have the ability to [name their operations](https://www.apollographql.com/docs/react/data/operation-best-practices/#name-all-operations), which can provide more context around how and where the data is being used within the client. Together these pieces of info make a graph much easier to monitor and allows teams to communicate with each other successfully.
