Fix typos in index technotes

--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -2,4 +2,4 @@
 title: Apollo Tech Notes
 ---
 
-Apollo Tech Notes serve as a place to host technical content of many various topics. They can include example code snippets, short explinations on architecture ideas, or more info on how to use the Apollo plaform that doesn't quite have a home in the  main docs.
+Apollo Tech Notes serve as a place to host technical content of many various topics. They can include example code snippets, short explanations on architecture ideas, or more info on how to use the Apollo platform that doesn't quite have a home in the  main docs.
