--- a/src/content/studio/schema/schema-reporting.mdx
+++ b/src/content/studio/schema/schema-reporting.mdx
@@ -8,7 +8,9 @@ import ObtainGraphApiKey from '../../shared/obtain-graph-api-key';
 
 > **Schema reporting does not currently support graphs that use Apollo Federation.** If you have a federated graph, instead see [Setting up managed federation](https://www.apollographql.com/docs/federation/managed-federation/setup/).
 
-> **⚠️ Caution ⚠️**
+> **⚠️ Important:** With schema reporting, your sever publishes schema updates at runtime. This can lead to non-deterministic results. We recommend instead using the [Rover CLI](/rover/) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
+>
+> For more information on staging and releasing schema updates, see You can also read our Enterprise Guide on [Change management in Apollo Federation](/enterprise-guide/change-management/)
 >
 > Schema reporting requires your sever to publish the schema updates at runtime. This can lead to non-deterministic results.
 > We recommend using the [Rover CLI](https://www.apollographql.com/docs/rover) in a CI/CD pipeline for isolated and reproducible schema checks and publishes.
