--- a/src/content/technotes/index.mdx
+++ b/src/content/technotes/index.mdx
@@ -2,4 +2,11 @@
 title: Apollo Tech Notes
 ---
 
-Apollo Tech Notes serve as a place to host technical content of many various topics. They can include example code snippets, short explanations on architecture ideas, or more info on how to use the Apollo platform that doesn't quite have a home in the  main docs.
+Apollo Tech Notes serve as a place to host technical content of many various topics. They can include example code snippets, short explanations on architecture ideas, or more info on how to use the Apollo platform that doesn't quite have a home in the main docs.
+
+## Reporting issues
+
+If you find any issue with a particular tech note, feel free to use the "Edit on GitHub" button to create a new PR with the suggested changes. Otherwise, you can view the source and create a GitHub issue on the [apollographql/docs](https://github.com/apollographql/docs) repo.
+
+## Adding new tech notes
+If you have an idea for a new tech note, please [create a new GitHub issue](https://github.com/apollographql/docs/issues) with the suggested changes or topic that you would like covered.
