--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -1,13 +1,17 @@
 ---
 title: Apollo Sandbox
-description: Use Studio features without an Apollo account
+description: Use Studio's devtools without an Apollo account
 ---
 
-**Apollo Sandbox** is a special mode of Apollo Studio that doesn't require an Apollo account. It provides a subset of Studio features that are great for local development, including:
+**Apollo Sandbox** is a special mode of Apollo Studio that is meant to be used for local development.
+Sandbox loads with a schema from introspection as opposed to a schema from the Apollo registry and provides access to a subset of Studio's devtools:
 
-* [The Explorer](./explorer/)
-* Schema reference
-* [Schema checks](../schema-checks/) and diffs against registered graphs (for logged-in users)
+- [The Explorer](./explorer/)
+- Schema reference
+- [Schema checks](../schema-checks/) and diffs against registered graphs (for logged-in users)
+
+Sandbox can be used offline and without an Apollo account.
+You can use Sandbox in our hosted environment on Apollo Studio or [run it yourself](/studio/explorer/sandbox#embedding-sandbox).
 
 <Button
   size="lg"
@@ -28,7 +32,12 @@ description: Use Studio features without an Apollo account
 
 When you open Sandbox, it automatically attempts to connect to a GraphQL server running at `http://localhost:4000`. You can use the box at the top of the Explorer to change this URL to any local or remote GraphQL endpoint that's accessible by your browser:
 
-<img class="screenshot" src="../img/sandbox-url.jpg" alt="Sandbox URL field" width="300" />
+<img
+  class="screenshot"
+  src="../img/sandbox-url.jpg"
+  alt="Sandbox URL field"
+  width="300"
+/>
 
 > To try out Sandbox with an example GraphQL API, you can set the URL to `https://swapi-graphql.netlify.app/.netlify/functions/index`.
 
@@ -40,33 +49,40 @@ If you're signed in to Sandbox with your Apollo account, you can publish your Gr
 
 To do so, first click **Publish** at the top of the Explorer. The following dialog appears:
 
-<img class="screenshot" src="../img/sandbox-publish.jpg" alt="Publishing schemas to Studio from Sandbox" width="400" />
+<img
+  class="screenshot"
+  src="../img/sandbox-publish.jpg"
+  alt="Publishing schemas to Studio from Sandbox"
+  width="400"
+/>
 
 1. Use the dropdown menu to choose an organization for your new graph.
 2. Provide a title for your graph.
 3. If you've created any [Sandbox operation collections](./operation-collections/#sandbox-collections), you can copy those over to your new graph by checking the box.
-    * This option doesn't appear if you haven't created any Sandbox collections.
+   - This option doesn't appear if you haven't created any Sandbox collections.
 4. Click **Confirm**.
 
 When Sandbox finishes publishing your schema, it redirects you to your new graph in Studio.
 
-## In-Sandbox schema diffs and checks
+## Schema diffs
 
-Apollo Sandbox provides schema diffs and checks to help you validate changes to your development schema before you publish those changes to Studio.
-
-> These features require you to be signed in to Sandbox with your Apollo account.
-
-### Schema diffs
+If you log into Apollo Studio, you can diff the schema in your Sandbox against any graph you have access to in the registry.
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Schema Diff** page from the left navigation panel. Then use the dropdown menus to select any accessible organization, graph, and variant to compare against:
 
-<img class="screenshot" src="../img/sandbox-diff.jpg" alt="Schema diff in Sandbox" />
+<img
+  class="screenshot"
+  src="../img/sandbox-diff.jpg"
+  alt="Schema diff in Sandbox"
+/>
 
-> If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, not the generated subgraph schema that includes federation-specific fields like Query._entities. You can view the generated subgraph schema from the SDL page in Sandbox.
+> If you're using Sandbox with a subgraph, this diff shows the schema as originally defined, not the generated subgraph schema that includes federation-specific fields like Query.\_entities. You can view the generated subgraph schema from the SDL page in Sandbox.
 
 In addition to viewing the diff on this page, you can click **Run a Check** in the upper-right to run [schema checks](#schema-checks) against the currently selected variant.
 
-### Schema checks
+## Schema checks
+
+If you log into Apollo Studio, you can run a Schema Check between the schema in your Sandbox and a graph you have access to in the Apollo registry.
 
 > [Schema checks](../schema-checks/) require [usage reporting data](../metrics/usage-reporting/) from your GraphQL server.
 >
@@ -74,11 +90,21 @@ In addition to viewing the diff on this page, you can click **Run a Check** in t
 
 From [Sandbox](https://studio.apollographql.com/sandbox/), open the **Checks** page from the left navigation panel:
 
-<img class="screenshot" src="../img/sandbox-checks-select.jpg" alt="Sandbox select variant for checks" width="400" />
+<img
+  class="screenshot"
+  src="../img/sandbox-checks-select.jpg"
+  alt="Sandbox select variant for checks"
+  width="400"
+/>
 
 Select any accessible organization, graph, and variant to check against and click **Run a check**. When the check completes, Sandbox displays a result summary:
 
-<img class="screenshot" src="../img/sandbox-checks-result.jpg" alt="Sandbox checks result" width="400" />
+<img
+  class="screenshot"
+  src="../img/sandbox-checks-result.jpg"
+  alt="Sandbox checks result"
+  width="400"
+/>
 
 To view the result's _full_ details in Studio, click **Go to details**.
 
@@ -86,11 +112,21 @@ To view the result's _full_ details in Studio, click **Go to details**.
 
 You can run subgraph checks on federated graphs. If you're using Sandbox with a subgraph, you can use the subgraph dropdown to select which subgraph you want to check your changes against.
 
-<img class="screenshot" src="../img/subgraph-sandbox-check-prompt.jpg" alt="Sandbox subgraph check prompt" width="500" />
+<img
+  class="screenshot"
+  src="../img/subgraph-sandbox-check-prompt.jpg"
+  alt="Sandbox subgraph check prompt"
+  width="500"
+/>
 
 When you click **Run a check**, Studio first performs a composition check using your local subgraph schema and the registered schemas of your other subgraphs. If composition succeeds, Sandbox then performs operation checks as usual and displays the results of all checks. If composition fails, Sandbox does not perform operation checks and displays the composition error.
 
-<img class="screenshot" src="../img/subgraph-sandbox-one-check-failed.jpg" alt="Sandbox subgraph check result" width="500" />
+<img
+  class="screenshot"
+  src="../img/subgraph-sandbox-one-check-failed.jpg"
+  alt="Sandbox subgraph check result"
+  width="500"
+/>
 
 ## Offline Sandbox
 
@@ -105,3 +141,39 @@ Sandbox automatically reconnects to Apollo Studio whenever your internet connect
 ## Operation collections in Sandbox
 
 See [this section](./operation-collections/#sandbox-collections).
+
+## Embedding Sandbox
+
+In addition to using [Studio's hosted version of Sandbox](https://studio.apollographql.com/sandbox), you can also embed Sandbox on your own website.
+This may be useful for bootstrapping a GraphQL IDE onto a development endpoint or an endpoint with CORS restrictions.
+
+To embed Sandbox on an HTML page:
+
+```html
+<div
+  style="width: 100vw; height: 100vh; position: absolute; top: 0"
+  id="embeddableSandbox"
+></div>
+<script src="https://embeddable-sandbox.cdn.apollographql.com/_latest/embeddable-sandbox.umd.production.min.js"></script>
+<script>
+  new window.EmbeddedSandbox({
+    target: "#embeddableSandbox",
+    initialEndpoint: window.location.href,
+    // optional
+    includeCookies: false,
+    // optional
+    handleRequest: (endpointUrl, options) =>
+      fetch(endpointUrl, {
+        ...options,
+        headers: {
+          ...options.headers,
+          authorization: `token ${token}`,
+        },
+      }),
+  });
+</script>
+```
+
+In general, we recommend you **only embed Sandbox in development environments**.
+Sandbox is powered by schema introspection and we recommend [turning off introspection in production](https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/).
+If you want to provide a **similar experience to Embedded Sandbox on a production endpoint**, we recommend using Studio's [Public Graphs](https://www.apollographql.com/docs/studio/org/graphs#public-variants) or [Embedded Explorer](https://www.apollographql.com/docs/studio/explorer/embed-explorer).
