Remove the use of a variable here
Remove the use of a phantom variable so the text can be copied directly :)

--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -167,7 +167,7 @@ To embed Sandbox on an HTML page:
         ...options,
         headers: {
           ...options.headers,
-          authorization: `token ${token}`,
+          authorization: `token ABC`,
         },
       }),
   });
