--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -210,7 +210,7 @@ These are the optional options you can include in the object you pass to `new Em
 </td>
 <td>
 
-This will be the initial endpoint introspected wjen the Sandbox renders on page load. 
+This will be the initial endpoint introspected when the Sandbox renders on page load. 
 The schema at this endpoint will be used to populate the Sandbox pages. Defaults to `http://localhost:4000`.
 
 In general, we recommend you **only pass development endpoints to Sandbox**.
