--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -249,7 +249,7 @@ You might want to do this if you need to include specific headers in every reque
 
 By default, the embedded Sandbox uses the default `fetch` function to make requests, which passes `{ credentials: 'omit' }`.
 
-You can pass `includeCookies: true` if you want `{ credentials: 'include' }` to be passed as an option whenever requests are make from the Explorer. If you pass a `handleRequest`, this option will be ignored.
+You can pass `includeCookies: true` if you want `{ credentials: 'include' }` to be passed as an option whenever requests are made from Explorer. If you pass a `handleRequest`, this option will be ignored.
 
 Read more about the `fetch` API and credentials [here](https://developer.mozilla.org/en-US/docs/Web/API/fetch#credentials).
 </td>
