--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -1,13 +1,22 @@
 ---
-title: Connecting OpenTelemetry Traces to Prometheus
+title: Connecting OpenTelemetry traces to Prometheus
 tags: [server, observability]
 ---
-While traces can provide concrete examples of possible performance issues occurring at various stages of your application, it doesn't provide a broader image of how your application is performing. Thankfully, there's a quick and easy way to convert those traces into aggregated metrics without requiring manual instrumentation. To accomplish this, we'll be using `spanmetricsprocessor` in an OpenTelemetry Collector instance to automatically generate metrics from our existing trace spans. 
+Operation traces provide insight into performance issues that are occurring at various execution points in your graph. However, individual traces don't provide a view of your graph's broader performance.
 
-## OpenTelemetry Collector Configuration
-OpenTelemetry offers two different repositories for their OpenTelemetry Collector; the first is the core library (https://github.com/open-telemetry/opentelemetry-collector) and the other the contributor library (https://github.com/open-telemetry/opentelemetry-collector-contrib). Functionally, these two are similar in scope, however certain features not suitable for the core library are only available within the contrib library (or other third party features). To get quick metrics from existing spans, we'll be using the contrib library as we'll be using  `spanmetricsprocessor` via the associated Docker image, however we'd also recommend checking out the Collector Builder ([https://github.com/open-telemetry/opentelemetry-collector/tree/main/cmd/builder](https://github.com/open-telemetry/opentelemetry-collector/tree/main/cmd/builder)) to easily build tailored binaries to your environment instead of relying on prebuilt images. 
+Helpfully, you can convert your operation traces into aggregated metrics without requiring manual instrumentation. To accomplish this, we'll use `spanmetricsprocessor` in an OpenTelemetry Collector instance to automatically generate metrics from our existing trace spans. 
 
-Once you have OpenTelemetry Collector ready to run, a barebones configuration file would look like: 
+## OpenTelemetry Collector configuration
+OpenTelemetry provides two different repositories for their OpenTelemetry Collector: 
+
+* The [core library](https://github.com/open-telemetry/opentelemetry-collector) 
+* The [contributor library](https://github.com/open-telemetry/opentelemetry-collector-contrib)
+
+These repositories are similar in scope, but the contributor library includes extended features that aren't suitable for the core library. To derive performance metrics from our existing spans, we'll use the contributor library to take advantage of the `spanmetricsprocessor` via the associated Docker image.
+
+> We also recommend checking out the [Collector Builder](https://github.com/open-telemetry/opentelemetry-collector/tree/main/cmd/builder) to build binaries that are tailored to your environment instead of relying on prebuilt images. 
+
+When your OpenTelemetry Collector is ready to run, you can start configuring it with this barebones example:
 
 ```yaml
 receivers:
@@ -44,28 +53,28 @@ service:
       processors: [batch]
 ```
 
-## Apollo Server Setup
+## Apollo Server setup
 
-Simply add the OTLP Exporter (`@opentelemetry/exporter-trace-otlp-http`  Node package) following the same instructions [as shown in the documentation for Apollo Server and OpenTelemetry.](https://www.apollographql.com/docs/federation/opentelemetry/) 
+Add the OTLP Exporter (`@opentelemetry/exporter-trace-otlp-http`  Node package) following the same instructions [as shown in the documentation for Apollo Server and OpenTelemetry.](https://www.apollographql.com/docs/federation/opentelemetry/) 
 
-## Apollo Router Setup
+## Apollo Router setup
 
-See the following on how to send traces from Apollo Router to OpenTelemetry Collector: [https://www.apollographql.com/docs/router/configuration/tracing#opentelemetry-collector-via-otlp](https://www.apollographql.com/docs/router/configuration/tracing#opentelemetry-collector-via-otlp) 
+To send traces from the Apollo Router to OpenTelemetry Collector, see [this article](/router/configuration/tracing#opentelemetry-collector-via-otlp).
 
-## Prometheus Setup
+## Prometheus setup
 
-Lasty, you'll want to add the OpenTelemetry Collector as a target within Prometheus; it'll use the standard port for Prometheus metrics (`9464`). 
+Lastly, we need to add the OpenTelemetry Collector as a target within Prometheus. It'll use the standard port for Prometheus metrics (`9464`). 
 
 That's it- you should have access to span metrics using the same operation name!
 
-## Example Queries
+## Example queries
 
-If you're familiar with Prometheus, feel free to skip, but here are a few sample queries to help explore the data structure being reported: 
+Here are a few sample queries to help explore the data structure being reported: 
 
 - P95 by service: `histogram_quantile(.95, sum(rate(latency_bucket[5m])) by (le, service_name))`
 - Average latency by service and operation (e.g. router/graphql.validate): `sum by (operation, service_name)(rate(latency_sum{}[1m])) / sum by (operation, service_name)(rate(latency_count{}[1m]))`
 - RPM by service: `sum(rate(calls_total{operation="HTTP POST"}[1m])) by (service_name)`
 
-## Full Demo
+## Full demo
 
-To see this in action, check out the [Supergraph Demo](https://github.com/apollographql/supergraph-demo-fed2#tracing-with-open-telemetry) repository using the OpenTelemetry Collector specific Docker Compose image.
+To see this in action, check out the [Supergraph Demo](https://github.com/apollographql/supergraph-demo-fed2#tracing-with-open-telemetry) repository using the OpenTelemetry-Collector-specific Docker Compose image.
