--- a/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
+++ b/src/content/technotes/TN0003-opentelemetry-traces-to-prometheus.mdx
@@ -72,7 +72,7 @@ That's it- you should have access to span metrics using the same operation name!
 Here are a few sample queries to help explore the data structure being reported: 
 
 - P95 by service: `histogram_quantile(.95, sum(rate(latency_bucket[5m])) by (le, service_name))`
-- Average latency by service and operation (e.g. router/graphql.validate): `sum by (operation, service_name)(rate(latency_sum{}[1m])) / sum by (operation, service_name)(rate(latency_count{}[1m]))`
+- Average latency by service and operation (e.g. `router` / `graphql.validate`): `sum by (operation, service_name)(rate(latency_sum{}[1m])) / sum by (operation, service_name)(rate(latency_count{}[1m]))`
 - RPM by service: `sum(rate(calls_total{operation="HTTP POST"}[1m])) by (service_name)`
 
 ## Full demo
