--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -150,7 +150,7 @@ This may be useful for bootstrapping a GraphQL IDE onto a development endpoint o
 ### Setup
 
 1. <a href="https://studio.apollographql.com/sandbox" target="_blank">
-     Go to Sandbox
+     Open Sandbox.
    </a>
 
 2. Under the Explorer's Settings tab, find **Embed Sandbox** and click **Copy code snippet**.
