--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -215,7 +215,7 @@ The URL of the GraphQL endpoint that Sandbox introspects on initial load. Sandbo
 The default value is `http://localhost:4000`.
 
 **You should only pass non-production endpoints to Sandbox**. Sandbox is powered by schema introspection, and we recommend [disabling introspection in production](https://www.apollographql.com/blog/graphql/security/why-you-should-disable-graphql-introspection-in-production/).
-If you want to provide a **similar experience to embedded Sandbox on a production endpoint**, we recommend using Studio's [Public Graphs](https://www.apollographql.com/docs/studio/org/graphs#public-variants) or [embedded Explorer](https://www.apollographql.com/docs/studio/explorer/embed-explorer).
+To provide a "Sandbox-like" experience for production endpoints, we recommend using either a [public variant](https://www.apollographql.com/docs/studio/org/graphs#public-variants) or the [embedded Explorer](https://www.apollographql.com/docs/studio/explorer/embed-explorer).
 
 </td>
 </tr>
