--- a/src/content/studio/explorer/sandbox.mdx
+++ b/src/content/studio/explorer/sandbox.mdx
@@ -164,7 +164,7 @@ This may be useful for bootstrapping a GraphQL IDE onto a development endpoint o
      width="600"
    />
 
-3. Click **Copy** to copy the snippet, then paste it into your code.
+3. Click **Copy** to copy the snippet, then paste it into your html code.
 
 ### Options
 
